<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tecmo Super Bowl Team Select</string>
    <string name="text_1">Main Message window</string>
    <string name="text_2">P1 P2 Messages</string>
    <string name="text_3">Team 1</string>
    <string name="text_4">Team 2</string>
    <string name="text_5">Team 3</string>
    <string name="action_settings">Settings</string>
    <string name="button_1">OK</string>
    <string name="DebugTextView">Debug Window.  Click at any time to Reset.</string>
    <string name="Team1HelmetTextView"></string>

</resources>
