<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    tools:context=".MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:background="@drawable/bubble"
        >


        <TextView
            android:id="@+id/MainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="TODAY'S MATCHUP"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/P1MatchupText"
                    android:layout_width="wrap_content"
                    android:layout_height="20sp"
                    android:layout_marginLeft="10dp"
                    android:text="Player 1"
                    android:textSize="12sp"
                    />

                <ImageView
                    android:id="@+id/P1MatchupHelmet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p1"
                    />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                >


                <TextView
                    android:id="@+id/MatchupAdvantage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/MatchupVSText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:text=" VS."
                    android:textSize="20sp"
                    />



            </LinearLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"

                >

                <TextView
                    android:id="@+id/P2MatchupText"
                    android:layout_width="wrap_content"
                    android:layout_height="20sp"
                    android:layout_marginRight="10dp"
                    android:text="Player 2"
                    android:textSize="12sp"
                    />

                <ImageView
                    android:id="@+id/P2MatchupHelmet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p2"
                    />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/P1P2Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:text="@string/text_2"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/TeamSelectLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/Team1HelmetImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pit"/>

            <TextView

                android:id="@+id/Team1TextView"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="15sp"
                android:text="@string/text_3"
                android:textSize="20sp"
                    />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
            >

                <ImageView
                    android:id="@+id/Team2HelmetImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pit"
                    />

                <TextView
                    android:id="@+id/Team2TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginLeft="15sp"
                    android:text="@string/text_4"
                    android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
            >

                <ImageView
                    android:id="@+id/Team3HelmetImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pit"/>

                <TextView
                    android:id="@+id/Team3TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginLeft="15sp"
                    android:text="@string/text_5"
                    android:textSize="20sp"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        >


        <Button
            android:id="@+id/OKButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="top|center"
            android:text="@string/button_1"
            android:textSize="20sp"
            />
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <Button
            android:id="@+id/ResetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="Reset"
            android:textSize="20sp"
        />

    </LinearLayout>

</LinearLayout>